--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   --color-border-shadow: rgba(0, 0, 0, 0.5);
 }
 
-
+//this is very cool!
 body {
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
